Change name of test db

--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,6 +1,6 @@
 <p> Index </p>
 
 <% @businesses.each do |business| %>
-  <%= "Name: #{business.name}" %>
-  <%= "Address: #{business.address}" %>
+  <p><%= "Name: #{business.name}" %></p></br>
+  <p><%= "Address: #{business.address}" %><p></br>
 <% end %>
