--- a/app/views/businesses/_form.html.erb
+++ b/app/views/businesses/_form.html.erb
@@ -6,5 +6,11 @@
   <%= f.label :address %>
   <%= f.text_field :address %>
 
+  <%= f.label :heading %>
+  <%= f.number_field :heading, :step => 'any' %>
+
+  <%= f.label :pano %>
+  <%= f.text_field :pano %>
+
   <%= f.submit :Submit %>
 <% end %>
