--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -8,5 +8,7 @@
   <p><%= "Name: #{business.name}" %></p></br>
   <p><%= "Address: #{business.address}" %><p></br>
 
-  <%= image_tag("http://maps.googleapis.com/maps/api/streetview?size=400x200&heading=#{business.heading}&pitch=0&pano=#{business.pano}&sensor=false") %>
+  <%= link_to image_tag("http://maps.googleapis.com/maps/api/streetview?size=400x200&heading=#{business.heading}&pitch=0&pano=#{business.pano}&sensor=false"), "https://maps.google.com/maps?layer=c&panoid=#{business.pano}&cbp=,191.0,,0,-0.0&source=embed&output=svembedmfe" %>
+
+  <!-- https://maps.google.com/maps?layer=c&panoid=#{business.pano}&cbp=,191.0,,0,-0.0&cid=3979399238676398093&source=embed&output=svembedmfe -->
 <% end %>
