add cbp to form and test spec for add new business

--- a/app/views/businesses/_form.html.erb
+++ b/app/views/businesses/_form.html.erb
@@ -12,5 +12,8 @@
   <%= f.label :pano %>
   <%= f.text_field :pano %>
 
+  <%= f.label :cbp %>
+  <%= f.text_field :cbp %>
+
   <%= f.submit :Submit %>
 <% end %>
