--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,14 +1,9 @@
-<p>Index</p>	
-
-<!-- http://maps.googleapis.com/maps/api/streetview?size=400x400&location=43.64937,-79.386129&heading=0&sensor=false -->
-
-<!-- http://maps.googleapis.com/maps/api/streetview?size=358x168&heading=1.7980161409022752&pitch=0&pano=y8vXDeuLy7wAAAQXDqKVYQ&sensor=false&key=AIzaSyCH7urS_fgtfrvCldKIqqKt423bB8G6Bic -->
+<p>Index</p>
 
 <% @businesses.each do |business| %>
   <p><%= "Name: #{business.name}" %></p></br>
   <p><%= "Address: #{business.address}" %><p></br>
 
-  <%= link_to image_tag("http://maps.googleapis.com/maps/api/streetview?size=400x200&heading=#{business.heading}&pitch=0&pano=#{business.pano}&sensor=false"), "https://maps.google.com/maps?layer=c&panoid=#{business.pano}&cbp=,191.0,,0,-0.0&source=embed&output=svembedmfe" %>
+  <%= link_to image_tag("http://maps.googleapis.com/maps/api/streetview?size=400x200&heading=#{business.heading}&pitch=0&pano=#{business.pano}&sensor=false"), "https://maps.google.com/maps?layer=c&panoid=#{business.pano}&cbp=#{business.cbp}&source=embed&output=svembedmfe" %>
 
-  <!-- https://maps.google.com/maps?layer=c&panoid=#{business.pano}&cbp=,191.0,,0,-0.0&cid=3979399238676398093&source=embed&output=svembedmfe -->
 <% end %>
