Link to business show from name in index

--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,7 +1,7 @@
 <p>Index</p>
 
 <% @businesses.each do |business| %>
-  <p><%= "Name: #{business.name}" %></p></br>
+  <p><%= link_to business.name, business %></p>
   <p><%= "Address: #{business.address}" %><p></br>
 
   <%= link_to image_tag("http://maps.googleapis.com/maps/api/streetview?size=400x200&heading=#{business.heading}&pitch=0&pano=#{business.pano}&sensor=false"), "https://maps.google.com/maps?layer=c&panoid=#{business.pano}&cbp=#{business.cbp}&source=embed&output=svembedmfe" %>
