--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,10 @@
     <%= link_to "edit profile", edit_user_registration_path %> | 
     <%= link_to "Logout", destroy_user_session_path, method: :delete %>
   <% else %>
+    <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
     <%= link_to "Sign up", new_user_registration_path %> |
     <%= link_to "Login", new_user_session_path %>
+
   <% end %>
 
 	<% if flash[:notice] %>
