--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Innerspace</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-  <% if user_signed_in? %>
-    Logged in as <strong><%= current_user.email %></strong>
-    <%= link_to "edit profile", edit_user_registration_path %> | 
-    <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-  <% else %>
-    <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
-    <%= link_to "Sign up", new_user_registration_path %> |
-    <%= link_to "Login", new_user_session_path %>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <% end %>
+    <title><%= content_for?(:title) ? yield(:title) : "foundation-rails" %></title>
 
-	<% if flash[:notice] %>
-    <div class="alert-box success radius"><%= flash[:notice] %></div>
-  <% elsif flash[:alert] %>
-    <div class="alert-box alert radius"><%= flash[:alert] %></div>
-  <% end %>
+    <%= stylesheet_link_tag    "application" %>
+    <%= javascript_include_tag "vendor/modernizr" %>
+    <%= csrf_meta_tags %>
+  </head>
 
-<%= yield %>
+  <body>
+    <% if user_signed_in? %>
+      Logged in as <strong><%= current_user.email %></strong>
+      <%= link_to "edit profile", edit_user_registration_path %> | 
+      <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+    <% else %>
+      <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+      <%= link_to "Sign up", new_user_registration_path %> |
+      <%= link_to "Login", new_user_session_path %>
 
-</body>
+    <% end %>
+
+    <% if flash[:notice] %>
+      <div class="alert-box success radius"><%= flash[:notice] %></div>
+    <% elsif flash[:alert] %>
+      <div class="alert-box alert radius"><%= flash[:alert] %></div>
+    <% end %>
+
+    <%= yield %>
+
+    <%= javascript_include_tag "application" %>
+  </body>
 </html>
