--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -9,8 +9,9 @@
 <!-- <div class="row"> -->
 	<% @businesses.each do |business| %>
     <div class="large-4 columns">
-    	<%= link_to image_tag("http://maps.googleapis.com/maps/api/streetview?size=500x300&heading=#{business.heading}&pitch=0&pano=#{business.pano}&sensor=false&key=#{ENV['google_maps_api_key']}"), "#", "data-reveal-id" => "streetviewModal" %>
-      
+    	<%= link_to image_tag(business.streetview_image), "#", "data-reveal-id" => "streetviewModal" %>
+      <!-- , "#", "data-reveal-id" => "streetviewModal" -->
+      <!-- "https://maps.google.com/maps?layer=c&panoid=#{business.pano}&cbp=#{business.cbp}&source=embed&output=svembedmfe" -->
 	    <p><%= link_to business.name, business %></p>
 	    <p><%= "Address: #{business.address}" %><p></br>
       <a href="#" data-reveal-id="streetviewModal" class="radius button">Example Modal w/Video&hellip;</a>
