--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -10,7 +10,7 @@
 	<% @businesses.each do |business| %>
     <div class="large-4 columns">
     	<%= link_to image_tag(business.streetview_image), "#", "data-reveal-id" => "streetviewModal" %>
-      <%= link_to  "hello", "https://maps.google.ca/maps?hl=en_uk&layer=c&panoid=#{business.pano}&cbp=#{business.cbp}&t=m&z=17&source=embed&output=svembed" %>
+      <%= link_to  "hello", business.streetview_tour %>
 	    <p><%= link_to business.name, business %></p>
 	    <p><%= "Address: #{business.address}" %><p></br>
       <a href="#" data-reveal-id="streetviewModal" class="radius button">Example Modal w/Video&hellip;</a>
