--- a/app/views/businesses/_form.html.erb
+++ b/app/views/businesses/_form.html.erb
@@ -6,6 +6,12 @@
   <%= f.label :address %>
   <%= f.text_field :address %>
 
+  <%= f.label :latitude %>
+  <%= f.number_field :latitude, :step => 'any' %>
+
+  <%= f.label :longitude %>
+  <%= f.number_field :longitude, :step => 'any' %>
+
   <%= f.label :heading %>
   <%= f.number_field :heading, :step => 'any' %>
 
