change link of streetview tour

--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -17,13 +17,12 @@
 	  </div>
   <% end %>
 
-
-<!-- https://maps.google.ca/maps?hl=en_uk&ll=45.342201,-79.142333&spn=0.18,0.3&sll=45.342201,-79.142333&layer=c&cid=9868969958630749867&panoid=EhNek1P-56N9g13_kol5OQ&cbp=,208.89,,0,0.91000366&gl=CA&t=m&z=17&source=embed&output=svembed -->
-<div id="streetviewModal" class="reveal-modal large" data-reveal>
+  <div id="streetviewModal" class="reveal-modal large" data-reveal>
+  
   <h2>This modal has video</h2>
   <div class="flex-video">
     <iframe width="420" height="315" src="
-    https://maps.google.ca/maps?hl=en_uk&ll=45.342201,-79.142333&layer=c&panoid=EhNek1P-56N9g13_kol5OQ&cbp=,208.89,,0,0.91000366&t=m&z=17&source=embed&output=svembed" frameborder="0" allowfullscreen></iframe>
+    https://maps.google.ca/maps?hl=en_uk&amp;ll=43.64937,-79.386129&amp;layer=c&amp;panoid=3L5NCiIf__oAAAQIt-clrA&amp;cbp=,191.0,,0,-0.0&amp;t=m&amp;z=17&amp;source=embed&amp;output=svembed" frameborder="0" allowfullscreen></iframe>
   </div>
 
   <a class="close-reveal-modal">&#215;</a>
