--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,4 +1,4 @@
-<iframe width="420" height="315" src="<%= @business.streetview_tour %>" frameborder="0" allowfullscreen></iframe>
+<iframe width="100%" height="60%" src="<%= @business.streetview_tour %>" frameborder="0" allowfullscreen></iframe>
 
 <h1><%= "Name: #{@business.name}" %></h1>
 <p><%= "Address: #{@business.address}" %></p>
