--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -8,7 +8,7 @@
 <!-- <div class="row"> -->
 	<% @businesses.each do |business| %>
     <div class="large-4 columns">
-    	<%= link_to image_tag(business.streetview_image), business, :class => "streetview-image" %>
+    	<%= link_to image_tag(business.streetview_image), business, id: "#{business.name}", :class => "streetview-image" %>
 	    <p><%= link_to business.name, business %></p>
 	    <p><%= "Address: #{business.address}" %><p></br>
 	  </div>
