--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -9,7 +9,7 @@
 	<% @businesses.each do |business| %>
     <div class="large-4 columns">
     	<%= link_to image_tag(business.streetview_image), business, id: "#{business.name}", :class => "streetview-image" %>
-	    <p><%= link_to business.name, business %></p>
+	    <p><%= business.name %></p>
 	    <p><%= "Address: #{business.address}" %><p></br>
 	  </div>
   <% end %>
