add recent to top bar nav

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
 
         <!-- Left Nav Section -->
         <ul class="left">
-          <li><a href="#">Left Nav Button</a></li>
+          <li><%= link_to "Recent", recent_businesses_path %></li>
         </ul>
       </section>
     </nav>
