add random business picker

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,7 @@
         <!-- Left Nav Section -->
         <ul class="left">
           <li><%= link_to "Recent", recent_businesses_path %></li>
+          <li><%= link_to "Random", random_businesses_path %></li>
         </ul>
       </section>
     </nav>
