--- a/app/views/businesses/_form.html.erb
+++ b/app/views/businesses/_form.html.erb
@@ -6,6 +6,12 @@
   <%= f.label :address %>
   <%= f.text_field :address %>
 
+  <%= f.label :state %>
+  <% f.text_field :state %>
+
+  <%= f.label :country %>
+  <% f.text_field :country %>
+
   <%= f.label :latitude %>
   <%= f.number_field :latitude, :step => 'any' %>
 
