fix error in erb

--- a/app/views/businesses/_form.html.erb
+++ b/app/views/businesses/_form.html.erb
@@ -7,10 +7,10 @@
   <%= f.text_field :address %>
 
   <%= f.label :state %>
-  <% f.text_field :state %>
+  <%= f.text_field :state %>
 
   <%= f.label :country %>
-  <% f.text_field :country %>
+  <%= f.text_field :country %>
 
   <%= f.label :latitude %>
   <%= f.number_field :latitude, :step => 'any' %>
