--- a/app/views/businesses/_form.html.erb
+++ b/app/views/businesses/_form.html.erb
@@ -6,6 +6,9 @@
   <%= f.label :address %>
   <%= f.text_field :address %>
 
+  <%= f.label :city %>
+  <%= f.text_field :city %>
+
   <%= f.label :state %>
   <%= f.text_field :state %>
 
