--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -10,7 +10,8 @@
     <div class="large-4 columns">
     	<%= link_to image_tag(business.streetview_image), business, id: "#{business.name}", :class => "streetview-image" %>
 	    <p><%= business.name %></p>
-	    <p><%= "Address: #{business.address}" %><p></br>
+	    <p><%= business.formatted_address %><p>
+      <p><%= business.country %></p></br>
 	  </div>
   <% end %>
   
