--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,5 +1,5 @@
 <iframe width="100%" height="60%" src="<%= @business.streetview_tour %>" frameborder="0" allowfullscreen></iframe>
 
-<h1><%= @business.name} %></h1>
+<h1><%= @business.name %></h1>
 <p><%= @business.formatted_address %><p>
 <p><%= @business.country %></p>
