--- a/app/views/businesses/recent.html.erb
+++ b/app/views/businesses/recent.html.erb
@@ -4,7 +4,8 @@
   <div class="large-4 columns">
   	<%= link_to image_tag(business.streetview_image), business, id: "#{business.name}", :class => "streetview-image" %>
     <p><%= business.name %></p>
-    <p><%= "Address: #{business.address}" %><p>
+    <p><%= business.formatted_address %><p>
+    <p><%= business.country %></p>
     <p><%= "Date added: #{business.created_at.strftime("%d %b %Y")}" %><p>
   </div>
 <% end %>
