--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -5,6 +5,7 @@
   <%= submit_tag :Submit %>
 <% end %>
 
+<%= page_entries_info @businesses %>
 <!-- <div class="row"> -->
 	<% @businesses.each do |business| %>
     <div class="large-4 columns">
@@ -15,5 +16,5 @@
 	  </div>
   <% end %>
   
-</div>  
+<%= paginate @businesses %>  
 <!-- </div> -->
