style pagination in index

--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -5,7 +5,9 @@
   <%= submit_tag :Submit %>
 <% end %>
 
+<div>
 <%= page_entries_info @businesses %>
+</div>  
 <!-- <div class="row"> -->
 	<% @businesses.each do |business| %>
     <div class="large-4 columns">
