--- a/app/views/businesses/recent.html.erb
+++ b/app/views/businesses/recent.html.erb
@@ -1,5 +1,9 @@
 <h2>Recently Added Businesses</h2>
 
+<div>
+<%= page_entries_info @businesses %>
+</div> 
+
 <% @businesses.each do | business| %>
   <div class="large-4 columns">
   	<%= link_to image_tag(business.streetview_image), business, id: "#{business.name}", :class => "streetview-image" %>
@@ -9,3 +13,5 @@
     <p><%= "Date added: #{business.created_at.strftime("%d %b %Y")}" %><p>
   </div>
 <% end %>
+
+<%= paginate @businesses %> 
