Add in formatting for text

--- a/app/views/static_pages/about_me.html.erb
+++ b/app/views/static_pages/about_me.html.erb
@@ -1,20 +1,30 @@
+<p>
 Welcome to Jonathan Chang's pet project.  I am a web developer in Toronto, Canada.  
 In the past I have worked on the pilot projects with Google that have turned out to be
 what is now known as Google Business View and Street View for businesses.  Here are a few
 news article from when I was working with the project.  
-http://www.thestar.com/news/gta/2011/07/19/google_adds_pedal_power_to_its_view_of_toronto.html
-http://www.ottawacommunitynews.com/news-story/2210653-google-goes-three-wheeling/ 
+<%= link_to "Article 1", "http://www.thestar.com/news/gta/2011/07/19/google_adds_pedal_power_to_its_view_of_toronto.html" %>,
+<%= link_to "Article 2", "http://www.ottawacommunitynews.com/news-story/2210653-google-goes-three-wheeling/" %>.
+</p>
 
+<p>
 Working on these projects was a great experience and I visited a lot of great locations
 in Eastern Canada.  However, I realize that not many people know about these features of
 Street View in that you can now view certain businesses and tourist attractions outdoors as well as 
 indoors.  
+</p>
 
+<p>
 I built this website to document about the businesses and special locations that have been Street Viewed
 so that other people can enjoy visiting locations around the world.
+</p>
 
+<p>
 If you are a business owner and want Street View done to your indoors, I can help you with the process to get
 it done.  Just contact me at my details below.
+</p>
 
+<p>
 If you work for a special location like a tourist attraction, university, college, park, etc. and want Street View
 done for your outdoor, contact me and I can help you with the process to get it approved.
+</p>
