--- a/app/views/static_pages/about_me.html.erb
+++ b/app/views/static_pages/about_me.html.erb
@@ -1,3 +1,5 @@
+<h2>About Me</h2>
+
 <p>
 Welcome to Jonathan Chang's pet project.  I am a web developer in Toronto, Canada.  
 In the past I have worked on the pilot projects with Google that have turned out to be
