add link to contact page on nav bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,7 @@
           <li><%= link_to "Recent", recent_businesses_path %></li>
           <li><%= link_to "Random", random_businesses_path %></li>
           <li><%= link_to "About Me", about_me_path %></li>
+          <li><%= link_to "Contact", contact_us_path %></li>
         </ul>
       </section>
     </nav>
