--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -11,7 +11,7 @@
 <!-- <div class="row"> -->
 	<% @businesses.each do |business| %>
     <div class="large-4 columns">
-    	<%= link_to image_tag(business.image), business, id: "#{business.name}", :class => "streetview-image" %>
+    	<%= link_to image_tag(business.image.url), business, id: "#{business.name}", :class => "streetview-image" %>
 	    <p><%= business.name %></p>
 	    <p><%= business.formatted_address %><p>
       <p><%= business.country %></p></br>
