style search select

--- a/app/assets/stylesheets/businesses.css.scss
+++ b/app/assets/stylesheets/businesses.css.scss
@@ -3,6 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #search {
-	width: 10%;
+	position: relative;
+	width: 20%;
 	margin: 0 auto;
 }
