--- a/app/assets/stylesheets/businesses.css.scss
+++ b/app/assets/stylesheets/businesses.css.scss
@@ -12,13 +12,11 @@
 	display: inline-block;
 	background: #FEFEFE;
 	border: 2px solid #FAFAFA;
-	box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
-	margin: 0 2px 15px;
-	-webkit-column-break-inside: avoid;
-	-moz-column-break-inside: avoid;
-	column-break-inside: avoid;
+	box-shadow: 0 2px 4px rgba(34, 25, 25, 0.4);
+	// margin: 0 2px 15px;	
 	padding: 15px;
 	padding-bottom: 5px;
+	margin-top: 20px;
 	background: -webkit-linear-gradient(45deg, #FFF, #F9F9F9);
-	opacity: 1;
+		opacity: 1;
 }
