button styling in contact us

--- a/app/views/contact_us/contacts/new.html.erb
+++ b/app/views/contact_us/contacts/new.html.erb
@@ -33,6 +33,6 @@
     <% end %>
   </div>
   <div class='commit'>
-    <%= f.submit :submit, :class => 'submit create', :title => t('.submit') %>
+    <%= f.submit :submit, :class => 'button small submit create', :title => t('.submit') %>
   </div>
 <% end %>
