contact me styling

--- a/app/assets/stylesheets/businesses.css.scss
+++ b/app/assets/stylesheets/businesses.css.scss
@@ -8,7 +8,7 @@
 	margin: 0 auto;
 }
 
-.business {
+.box {
 	display: inline-block;
 	background: #FEFEFE;
 	border: 2px solid #FAFAFA;
@@ -19,8 +19,4 @@
 	margin-top: 20px;
 	background: -webkit-linear-gradient(45deg, #FFF, #F9F9F9);
 		opacity: 1;
-}
-
-.business-info {
-	text-align: center;
 }
