--- a/app/views/static_pages/about_me.html.erb
+++ b/app/views/static_pages/about_me.html.erb
@@ -1,6 +1,6 @@
-<h2 id="about-title">About Me</h2>
+<h2 class="title">About Me</h2>
 
-<div id="about-text" class="business">
+<div id="about-text" class="box">
 	<p>
 	Welcome to Jonathan Chang's pet project.  I am a web developer in Toronto, Canada.  
 	In the past I have worked on the pilot projects with Google that have turned out to be
