--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,15 @@
  *= require_tree .
  */
 
+#contact-container {
+	margin-left: 15%;
+	margin-right: 15%;
+}
+
 #contact_us_contact_message {
 	height: 200px;
+}
+
+.title {
+	text-align: center;
 }
