--- a/app/views/businesses/recent.html.erb
+++ b/app/views/businesses/recent.html.erb
@@ -5,7 +5,7 @@
 </div> 
 
 <% @businesses.each do | business| %>
-  <div class="large-4 columns">
+  <div class="large-4 columns box">
   	<%= link_to image_tag(business.streetview_image), business, id: "#{business.name}", :class => "streetview-image" %>
     <p><%= business.name %></p>
     <p><%= business.formatted_address %><p>
