Add title and slogan to index

--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,5 +1,7 @@
-<p>Index</p>
-
+<div class="title">
+  <h1>Welcome to Scouting it!</h1>
+  <h2>Visit the world, at home</h2>
+</div>
 
 <div id="search"> 
 <%= form_tag(businesses_path, :method => "get", id: "business-search") do %> 
