add my image to about

--- a/app/views/static_pages/about_me.html.erb
+++ b/app/views/static_pages/about_me.html.erb
@@ -1,6 +1,7 @@
 <h2 class="title">About Me</h2>
 
 <div id="about-text" class="box">
+
 	<p>
 	Welcome to Jonathan Chang's pet project.  I am a web developer in Toronto, Canada.  
 	In the past I have worked on the pilot projects with Google that have turned out to be
@@ -31,4 +32,5 @@
 	If you work for a special location like a tourist attraction, university, college, park, etc. and want Street View
 	done for your outdoor, contact me and I can help you with the process to get it approved.
 	</p>
+	<%= image_tag("jonathan.jpg", :id => "self-picture") %>
 </div>
