country select box for filter

--- a/app/assets/stylesheets/businesses.css.scss
+++ b/app/assets/stylesheets/businesses.css.scss
@@ -3,9 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #search {
-	position: relative;
-	width: 20%;
-	margin: 0 auto;
+  position: inline-block;
+	width: 15%;
+	margin-left: 45%;
 }
 
 .box {
