--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -3,11 +3,15 @@
   <h2>Visit the world, at home</h2>
 </div>
 
-<div id="search"> 
-<%= form_tag(businesses_path, :method => "get", id: "business-search") do %> 
-  <%= select_tag :category, options_from_collection_for_select(@category, "id", "name") %>
-  <%= submit_tag :Submit, :class => "button tiny" %>
-<% end %>
+<div id="search-container">
+  <div id="search"> 
+  <%= form_tag(businesses_path, :method => "get", id: "business-search") do %> 
+    <p>Filter by</p>
+    <%= select_tag :category, options_from_collection_for_select(@category, "id", "name"), {:prompt => "Category"} %>
+    <%= select_tag :country, {:prompt => "Country"} %>
+    <%= submit_tag :Submit, :class => "button tiny" %>
+  <% end %>
+  </div>
 </div>
 
 <% @businesses.each do |business| %>
