styling for form partial

--- a/app/views/businesses/_form.html.erb
+++ b/app/views/businesses/_form.html.erb
@@ -1,36 +1,39 @@
-<%= form_for @business do |f| %>
-  
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+<div class="form">
+  <%= form_for @business do |f| %>
+    
+    <%= f.label :name %>
+    <%= f.text_field :name %>
 
-  <%= f.label :address %>
-  <%= f.text_field :address %>
+    <%= f.label :address %>
+    <%= f.text_field :address %>
 
-  <%= f.label :city %>
-  <%= f.text_field :city %>
+    <%= f.label :city %>
+    <%= f.text_field :city %>
 
-  <%= f.label :state %>
-  <%= f.text_field :state %>
+    <%= f.label :state %>
+    <%= f.text_field :state %>
 
-  <%= f.label :country %>
-  <%= f.text_field :country %>
+    <%= f.label :country %>
+    <%= f.text_field :country %>
 
-  <%= f.label :latitude %>
-  <%= f.number_field :latitude, :step => 'any' %>
+    <%= f.label :latitude %>
+    <%= f.number_field :latitude, :step => 'any' %>
 
-  <%= f.label :longitude %>
-  <%= f.number_field :longitude, :step => 'any' %>
+    <%= f.label :longitude %>
+    <%= f.number_field :longitude, :step => 'any' %>
 
-  <%= f.label :heading %>
-  <%= f.number_field :heading, :step => 'any' %>
+    <%= f.label :heading %>
+    <%= f.number_field :heading, :step => 'any' %>
 
-  <%= f.label :pano %>
-  <%= f.text_field :pano %>
+    <%= f.label :pano %>
+    <%= f.text_field :pano %>
 
-  <%= f.label :cbp %>
-  <%= f.text_field :cbp %>
+    <%= f.label :cbp %>
+    <%= f.text_field :cbp %>
 
-  <%= f.collection_select :category_id, Category.all, :id, :name, include_blank: true %>
+    <%= f.label :category %>
+    <%= f.collection_select :category_id, Category.all, :id, :name, include_blank: true %>
 
-  <%= f.submit :Submit %>
-<% end %>
+    <%= f.submit :Submit, :class => "button" %>
+  <% end %>
+</div>
