--- a/app/assets/stylesheets/businesses.css.scss
+++ b/app/assets/stylesheets/businesses.css.scss
@@ -1,13 +1,6 @@
 // Place all the styles related to the businesses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-#search {
-  position: inline-block;
-	width: 15%;
-	margin-left: 45%;
-}
-
 .box {
 	display: inline-block;
 	background: #FEFEFE;
@@ -19,6 +12,17 @@
 	margin-top: 20px;
 	background: -webkit-linear-gradient(45deg, #FFF, #F9F9F9);
 		opacity: 1;
+}
+
+.form {
+	margin-left: 10%;
+	margin-right: 10%;
+}
+
+#search {
+  position: inline-block;
+	width: 15%;
+	margin-left: 45%;
 }
 
 #show-info {
