--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -7,6 +7,7 @@
   <div id="search"> 
   <%= form_tag(businesses_path, :method => "get", id: "business-search") do %> 
     <p>Filter by</p>
+    <%= label_tag :category %>
     <%= select_tag :category, options_from_collection_for_select(@category, "id", "name") %>
     <%= submit_tag :Submit, :class => "button tiny" %>
   <% end %>
