--- a/app/views/businesses/edit.html.erb
+++ b/app/views/businesses/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Edit a business</h1>
+<h1 class="title">Edit a business</h1>
 <%= link_to "Delete", @business, :method => :delete %>
 <%= render 'form' %>
