--- a/app/views/businesses/recent.html.erb
+++ b/app/views/businesses/recent.html.erb
@@ -1,4 +1,4 @@
-<h2>Recently Added Businesses</h2>
+<h2 class="title">Recently Added Locations</h2>
 
 <% @businesses.each do | business| %>
   <div class="large-4 columns box">
