--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
         <ul class="left">
           <li><%= link_to "Recent", recent_businesses_path %></li>
           <li><%= link_to "Random", random_businesses_path %></li>
-          <li><%= link_to "About Me", about_me_path %></li>
+          <li><%= link_to "About", about_path %></li>
           <li><%= link_to "Contact", contact_us_path %></li>
         </ul>
       </section>
