filter search on same line

--- a/app/assets/stylesheets/businesses.css.scss
+++ b/app/assets/stylesheets/businesses.css.scss
@@ -20,8 +20,15 @@
 }
 
 #search {
-	width: 15%;
+	display: inline;
+}
+
+#search-content {
 	margin-left: 45%;
+}
+
+#category-select {
+	width: 25%;
 }
 
 #show-info {
