comment thread shows up on business show

--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -5,3 +5,7 @@
 	<p><%= @business.formatted_address %><p>
 	<p><%= @business.country %></p>
 </div>
+
+<div id="comments">
+	<%= commontator_thread(@business) %>
+</div>
