--- a/app/views/commontator/comments/_show.html.erb
+++ b/app/views/commontator/comments/_show.html.erb
@@ -4,7 +4,7 @@
 %>
 
 <% creator = comment.creator
-   name = Commontator.commontator_name(creator) || ''
+   name = creator.display_name || ''
    link = Commontator.commontator_link(creator) || ''
 %>
 
