--- a/app/views/commontator/comments/_body.html.erb
+++ b/app/views/commontator/comments/_body.html.erb
@@ -4,6 +4,6 @@
 
 <%= simple_format comment.is_deleted? ? \
       t('commontator.comment.status.deleted_by',
-        :deleter_name => Commontator.commontator_name(comment.editor)) : \
+        :deleter_name => comment.creator_name) : \
       comment.body %>
 
