--- a/app/views/commontator/comments/_actions.html.erb
+++ b/app/views/commontator/comments/_actions.html.erb
@@ -21,7 +21,7 @@
   <% del_string = is_deleted ? 'undelete' : 'delete' %>
   <%= link_to t("commontator.comment.actions.#{del_string}"),
               commontator.polymorphic_path([del_string, comment]),
-              :confirm => (!is_deleted ? t('commontator.comment.actions.confirm_delete') : nil),
+              data: { confirm: (!is_deleted ? t('commontator.comment.actions.confirm_delete') : nil) },
               :method => :put,
               :id => "comment_#{comment.id.to_s}_#{del_string}_link",
               :class => "comment_#{del_string}_link",
