--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -9,6 +9,7 @@
     <%= form_tag(businesses_path, :method => "get", id: "business-search") do %> 
       <h4>Filter by</h4>
       <%= label_tag :category %>
+      <%= select_tag :country, options_from_collection_for_select(Business.unique_by_country, "id", "country") %>
       <%= select_tag :category, options_from_collection_for_select(@category, "id", "name"), :id => "category-select" %>
       <%= submit_tag :Submit, :class => "button tiny", :id => "search-submit" %>
     <% end %>
