change spelling on select fields

--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -7,10 +7,9 @@
   <div id="search-content">
   <div id="search"> 
     <%= form_tag(businesses_path, :method => "get", id: "business-search") do %> 
-      <h4>Filter by</h4>
-      <%= label_tag :category %>
-      <%= select_tag :country, options_from_collection_for_select(Business.unique_by_country, "country", "country"), { :prompt => "Any Country", :id => "country-select" } %>
-      <%= select_tag :category, options_from_collection_for_select(@category, "id", "name"), { :prompt => "Any Category", :id => "category-select" }%>
+      <%= label_tag :filter_by %>
+      <%= select_tag :country, options_from_collection_for_select(Business.unique_by_country, "country", "country"), { :prompt => "Country", :id => "country-select" } %>
+      <%= select_tag :category, options_from_collection_for_select(@category, "id", "name"), { :prompt => "Category", :id => "category-select" }%>
       <%= submit_tag :Submit, :class => "button tiny", :id => "search-submit" %>
     <% end %>
   </div>
