static_page index shows video as background

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -2,12 +2,38 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#video-container {
+	position: relative;
+	overflow: hidden;
+}
+
+#video-text {
+	position: absolute;
+	top: 30%;
+	left: 0;
+	width: 100%;
+}
+
+#taj-video {
+	width: 100%;
+	height: auto;
+	z-index: 1;
+}
+
 #about-text {
 	margin-left: 10%;
 	margin-right: 10%;
 }
 
 #about-title {
+	text-align: center;
+}
+
+.home-text {
+	font-size: 3em;
+	text-align: center;
+	color: white;
+	width: 100%;
 	text-align: center;
 }
 
