button on homepage

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -9,7 +9,7 @@
 
 #video-text {
 	position: absolute;
-	top: 30%;
+	top: 20%;
 	left: 0;
 	width: 100%;
 }
@@ -35,5 +35,10 @@
 	color: white;
 	width: 100%;
 	text-align: center;
+}
+
+#home-button {
+	opacity: 0.5;
+	margin: 0 auto;
 }
 
