--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,9 +2,9 @@
 	<%= video_tag("tajmahal.mp4", autoplay: true, loop: true, muted: true, :id => "taj-video") %>
 	<div id="video-text">
     <h1 class="home-text" id="slogan">Visit places around the world, at home</h1>
-    <%= button_tag businesses_path, :class => 'button', :id => "home-button" do %>
-      <%= t('Visit Places') %>
-    <% end %>
+    <div>
+      <%= button_to "Visit Places", businesses_path, :method => :get, :class => 'button', :id => "home-button" %>
+    </div>
 	</div>
 </div>
 
