links to businesses filtered by country works

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -10,6 +10,7 @@
 
 <div class="row">
 	<div class="large-4 columns">
-
+    <%= link_to "Canada", businesses_path(:country => "Canada", :category => "") %>
+    <%= link_to "United States", businesses_path(:country => "United States", :category => "") %>
 	</div>
 </div>
