--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -9,8 +9,15 @@
 </div>
 
 <div class="row">
-	<div class="large-4 columns">
-    <%= link_to "Canada", businesses_path(:country => "Canada", :category => "") %>
-    <%= link_to "United States", businesses_path(:country => "United States", :category => "") %>
+	<div class="large-5 columns">
+		<div id="canada">
+      <%= link_to image_tag("canada.jpg"), businesses_path(:country => "Canada", :category => "") %>
+    </div>
+  </div>
+
+  <div class="large-5 columns">  
+    <div>
+    	<%= link_to image_tag("unitedstates.jpg"), businesses_path(:country => "United States", :category => "") %>
+    </div>
 	</div>
 </div>
