adjust columns for homepage

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -9,15 +9,22 @@
 </div>
 
 <div class="row">
-	<div class="large-5 columns">
+	<div class="large-4 columns">
 		<div id="canada">
       <%= link_to image_tag("canada.jpg"), businesses_path(:country => "Canada", :category => "") %>
     </div>
   </div>
 
-  <div class="large-5 columns">  
+  <div class="large-4 columns">  
     <div>
     	<%= link_to image_tag("unitedstates.jpg"), businesses_path(:country => "United States", :category => "") %>
     </div>
 	</div>
+
+	<div class="large-4 columns">  
+    <div>
+    	<%= link_to image_tag("unitedstates.jpg"), businesses_path(:country => "United States", :category => "") %>
+    </div>
+	</div>
+	
 </div>
