--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -23,7 +23,7 @@
 
 	<div class="large-4 columns">  
     <div>
-    	<%= link_to image_tag("unitedstates.jpg"), businesses_path(:country => "United States", :category => "") %>
+    	<%= link_to image_tag("india.jpg"), businesses_path(:country => "India", :category => "") %>
     </div>
 	</div>
 	
