add title to country select

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -43,4 +43,12 @@
 	left:45%;
 }
 
+#country-select-title {
+	text-align: center;
+	margin-bottom: 50px;
+	
+}
 
+#select-title {
+	color: #565a5c;
+}
