--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -8,6 +8,10 @@
 	</div>
 </div>
 
+<div id="country-select-title">
+  <h2 id="select-title">Pick a country to visit</h2>
+</div>
+
 <div class="row">
 	<div class="large-4 columns">
 		<div id="canada">
