remove unnecessary divs

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -14,56 +14,38 @@
 
 <div class="row">
 	<div class="large-4 columns country">
-		<div id="canada">
       <%= link_to image_tag("canada.jpg"), businesses_path(:country => "Canada", :category => "") %>
-    </div>
   </div>
 
   <div class="large-4 columns country">  
-    <div>
     	<%= link_to image_tag("unitedstates.jpg"), businesses_path(:country => "United States", :category => "") %>
-    </div>
 	</div>
 
 	<div class="large-4 columns country">  
-    <div>
-    	<%= link_to image_tag("india.jpg"), businesses_path(:country => "India", :category => "") %>
-    </div>
+  	<%= link_to image_tag("india.jpg"), businesses_path(:country => "India", :category => "") %>  
 	</div>
 	
 	<div class="large-4 columns country">
-		<div id="canada">
       <%= link_to image_tag("canada.jpg"), businesses_path(:country => "Canada", :category => "") %>
-    </div>
   </div>
 
   <div class="large-4 columns country">  
-    <div>
     	<%= link_to image_tag("unitedstates.jpg"), businesses_path(:country => "United States", :category => "") %>
-    </div>
 	</div>
 
 	<div class="large-4 columns country">  
-    <div>
-    	<%= link_to image_tag("india.jpg"), businesses_path(:country => "India", :category => "") %>
-    </div>
+    <%= link_to image_tag("india.jpg"), businesses_path(:country => "India", :category => "") %>
 	</div>
 
-	<div class="large-4 columns country">
-		<div id="canada">
+	<div id="canada" class="large-4 columns country">
       <%= link_to image_tag("canada.jpg"), businesses_path(:country => "Canada", :category => "") %>
-    </div>
   </div>
 
   <div class="large-4 columns country">  
-    <div>
     	<%= link_to image_tag("unitedstates.jpg"), businesses_path(:country => "United States", :category => "") %>
-    </div>
 	</div>
 
 	<div class="large-4 columns country">  
-    <div>
     	<%= link_to image_tag("india.jpg"), businesses_path(:country => "India", :category => "") %>
-    </div>
 	</div>
 </div>
