add countries to country select

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -26,11 +26,11 @@
 	</div>
 	
 	<div class="large-4 columns country">
-      <%= link_to image_tag("canada.jpg"), businesses_path(:country => "Canada", :category => "") %>
+      <%= link_to image_tag("japan.jpg"), businesses_path(:country => "Japan", :category => "") %>
   </div>
 
   <div class="large-4 columns country">  
-    	<%= link_to image_tag("unitedstates.jpg"), businesses_path(:country => "United States", :category => "") %>
+    	<%= link_to image_tag("cambodia.jpg"), businesses_path(:country => "Cambodia", :category => "") %>
 	</div>
 
 	<div class="large-4 columns country">  
