--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -13,7 +13,7 @@
 </div>
 
 <div class="row">
-	<div class="large-4 columns country">
+	<div class="large-4 columns country" id="canada">
       <%= link_to image_tag("canada.jpg"), businesses_path(:country => "Canada", :category => "") %>
   </div>
 
@@ -34,7 +34,7 @@
 	</div>
 
 	<div class="large-4 columns country">  
-    <%= link_to image_tag("india.jpg"), businesses_path(:country => "India", :category => "") %>
+    <%= link_to image_tag("antarctica.jpg"), businesses_path(:country => "Antarctica", :category => "") %>
 	</div>
 
 	<div id="canada" class="large-4 columns country">
