--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -9,7 +9,7 @@
 </div>
 
 <div id="country-select-title">
-  <h2 id="select-title">Pick a country to visit</h2>
+  <h2 id="select-title">Pick a location to visit</h2>
 </div>
 
 <div class="row">
