--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -38,7 +38,7 @@
 	</div>
 
 	<div id="canada" class="large-4 columns country">
-      <%= link_to image_tag("canada.jpg"), businesses_path(:country => "Canada", :category => "") %>
+      <%= link_to image_tag("china.jpg"), businesses_path(:country => "China", :category => "") %>
   </div>
 
   <div class="large-4 columns country">  
