add brazil to locations

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -42,7 +42,7 @@
   </div>
 
   <div class="large-4 columns country">  
-    	<%= link_to image_tag("unitedstates.jpg"), businesses_path(:country => "United States", :category => "") %>
+    	<%= link_to image_tag("brazil.jpg"), businesses_path(:country => "Brazil", :category => "") %>
 	</div>
 
 	<div class="large-4 columns country">  
