give ocean a category field

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -46,6 +46,6 @@
 	</div>
 
 	<div class="large-4 columns country">  
-    	<%= link_to image_tag("ocean.jpg"), businesses_path(:country => "Ocean", :category => "") %>
+    	<%= link_to image_tag("ocean.jpg"), businesses_path(:country => "", :category => "Ocean") %>
 	</div>
 </div>
