--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,7 @@
 
         <!-- Left Nav Section -->
         <ul class="left">
+          <li><%= link_to "View All", businesses_path %></li>
           <li><%= link_to "Recent", recent_businesses_path %></li>
           <li><%= link_to "Random", random_businesses_path %></li>
           <li><%= link_to "About", about_path %></li>
