--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -4,7 +4,23 @@
 
 .country {
 	margin-bottom: 25px;
+	margin-right: 25px;
 	opacity: 0.85;
+	position: relative;
+	width: 320px;
+	height: 240px;
+	background-size: cover;
+}
+
+.country-text {
+	position: absolute;
+	top: 40%;
+	left: 0;
+	text-align: center;
+	color: white;
+	width: 100%;
+	font-size: 2em;
+
 }
 
 #video-container {
@@ -22,7 +38,7 @@
 
 #taj-video {
 	width: 100%;
-	height: auto;
+	height: 300px;
 	z-index: 1;
 }
 
@@ -57,3 +73,12 @@
 #select-title {
 	color: #565a5c;
 }
+
+#canada {
+	background-image: url("canada.jpg");
+}
+
+#unitedstates {
+	background-image: url("unitedstates.jpg");
+}
+
