--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -13,13 +13,17 @@
 </div>
 
 <div class="row">
-	<div class="large-4 columns country" id="canada">
-      <%= link_to image_tag("canada.jpg"), businesses_path(:country => "Canada", :category => "") %>
-  </div>
+	<%= link_to businesses_path(:country => "Canada", :category => "") do %>
+		<div class="large-4 columns country" id="canada">
+	      <p class="country-text">Canada</p>
+	  </div>
+  <% end %>
 
-  <div class="large-4 columns country">  
-    	<%= link_to image_tag("unitedstates.jpg"), businesses_path(:country => "United States", :category => "") %>
-	</div>
+  <%= link_to businesses_path(:country => "United States", :category => "") do %>
+	  <div class="large-4 columns country" id="unitedstates">  
+	    	<p class="country-text">United States</p>
+		</div>
+	<% end %>
 
 	<div class="large-4 columns country">  
   	<%= link_to image_tag("india.jpg"), businesses_path(:country => "India", :category => "") %>  
